--- a/index.html
+++ b/index.html
@@ -3,10 +3,195 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="styles/normalize.css">
+  <link rel="stylesheet" href="styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+
+    <header class="header">
+      <img src="images/logo_place_header.svg" alt="logo" class="logo logo_place_header">
+      <h1 class="header__title">Научиться учиться</h1>
+      <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать</a></h2>
+      <img class="header__main-illustration" src="images/header-image.png" alt="main illustration">
+      <div class="header__square-pic"></div>
+    </header>
+
+    <main class="content">
+
+      <section class="description">
+        <div class="two-columns">
+          <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+          <div class="two-columns__main-text">
+            <p class="paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+            <p class="paragraph"><span class="span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+            <p class="paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+          </div>
+        </div>
+      </section>
+
+      <section class="digits">
+        <h2 class="section-title">Цифры и факты</h2>
+        <h3 class="section-subtitle">Про учёбу и мозг</h3>
+        <ul class="table">
+
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">86 миллиардов</h4>
+              <p class="table__text">Число нейронов в мозге человека</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">2.1 миллиарда</h4>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">1000 терабайт</h4>
+              <p class="table__text">Объём памяти человека</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">500 триллионов</h4>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">420 миллионов</h4>
+              <p class="table__text">
+                Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">17–20 лет</h4>
+              <p class="table__text">Пик обучаемости</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">1885 год</h4>
+              <p class="table__text">Открытие кривой забывания</p>
+            </div>
+          </li>
+          <li class="table__cell">
+            <div>
+              <h4 class="table__heading">1889 год</h4>
+              <p class="table__text">Открытие условного рефлекса</p>
+            </div>
+          </li>
+
+        </ul>
+      </section>
+
+      <section class="feynman">
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <h3 class="feynman__subtitle">Выучить и не забыть.</h3>
+        <a class="feynman__link" href="#">Подробнее</a>
+      </section>
+
+      <section class="kaufman">
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <h3 class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+        <ul class="table table_theme_dark">
+
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">1</h4>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">2</h4>
+              <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">3</h4>
+              <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">4</h4>
+              <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">5</h4>
+              <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">6</h4>
+              <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">7</h4>
+              <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">8</h4>
+              <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">9</h4>
+              <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </div>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <div>
+              <h4 class="table__heading table__heading_theme_dark">10</h4>
+              <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            </div>
+          </li>
+
+        </ul>
+        <img class="triangle" src="images/kaufman-triangle.svg" alt="blue triangle">
+      </section>
+    </main>
+
+      <footer class="footer">
+        <ul class="footer__columns">
+          <li class="footer__column column_content_copyright">
+            <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
+            <h3 class="footer__author">&copy Анастасия Шайкина</h3>
+          </li>
+          <li class="footer__column column_content_info">
+            <h3 class="footer__column-heading">О Практикуме</h3>
+            <div class="footer__column-links">
+              <a class="footer__column-link" href="#">Главная</a>
+              <a class="footer__column-link" href="#">Концепция</a>
+              <a class="footer__column-link" href="#">Наставники</a>
+            </div>
+          </li>
+          <li class="footer__column column_content_social">
+            <h3 class="footer__column-heading">Соцсети</h3>
+            <div class="footer__column-links">
+              <a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg" alt="facebook logo" class="footer__social-icon">Facebook</a>
+              <a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="vk logo" class="footer__social-icon">ВКонтакте</a>
+              <a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg" alt="instagram logo" class="footer__social-icon">Instagram</a>
+            </div>
+          </li>
+        </ul>
+      </footer>
 
   </div>
 </body>
