--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <div class="page">
 
     <header class="header">
-      <img src="images/logo_place_header.svg" alt="logo" class="logo logo_place_header">
+      <img src="images/logo_place_header.svg" alt="лого" class="logo logo_place_header">
       <h1 class="header__title">Научиться учиться</h1>
       <h2 class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать</a></h2>
-      <img class="header__main-illustration" src="images/header-image.png" alt="main illustration">
+      <img class="header__main-illustration" src="images/header-image.png" alt="основная иллюстрация">
       <div class="header__square-pic"></div>
     </header>
 
@@ -164,14 +164,14 @@
           </li>
 
         </ul>
-        <img class="triangle" src="images/kaufman-triangle.svg" alt="blue triangle">
+        <img class="triangle" src="images/kaufman-triangle.svg" alt="синий треугольник">
       </section>
     </main>
 
       <footer class="footer">
         <ul class="footer__columns">
           <li class="footer__column column_content_copyright">
-            <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="logo">
+            <img class="logo logo_place_footer" src="images/logo_place_footer.svg" alt="лого">
             <h3 class="footer__author">&copy Анастасия Шайкина</h3>
           </li>
           <li class="footer__column column_content_info">
@@ -185,9 +185,9 @@
           <li class="footer__column column_content_social">
             <h3 class="footer__column-heading">Соцсети</h3>
             <div class="footer__column-links">
-              <a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg" alt="facebook logo" class="footer__social-icon">Facebook</a>
-              <a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="vk logo" class="footer__social-icon">ВКонтакте</a>
-              <a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg" alt="instagram logo" class="footer__social-icon">Instagram</a>
+              <a class="footer__column-link" href="#"><img src="images/facebook_color_white.svg" alt="фэйсбук лого" class="footer__social-icon">Facebook</a>
+              <a class="footer__column-link" href="#"><img src="images/vk_color_white.svg" alt="вконтакте лого" class="footer__social-icon">ВКонтакте</a>
+              <a class="footer__column-link" href="#"><img src="images/instagram_color_white.svg" alt="инстаграм лого" class="footer__social-icon">Instagram</a>
             </div>
           </li>
         </ul>
